--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,45 @@
 alembic==1.15.2
 blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
+feedparser==6.0.11
+filelock==3.18.0
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+fsspec==2025.3.2
+huggingface-hub==0.30.2
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.5
+packaging==25.0
+pillow==11.2.1
 python-dotenv==1.1.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
+setuptools==79.0.0
+sgmllib3k==1.0.0
 SQLAlchemy==2.0.40
+sympy==1.13.1
+tokenizers==0.21.1
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
+transformers==4.51.3
 typing_extensions==4.13.2
+urllib3==2.4.0
 Werkzeug==3.1.3
 WTForms==3.2.1
