--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,8 @@ Mako==1.3.10
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
-numpy==2.2.5
+# numpy==2.2.5
+numpy==1.26.4
 packaging==25.0
 pillow==11.2.1
 python-dotenv==1.1.0
