--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Database files
+*.db
+*.sqlite3
+*.sqlite3-journal
+
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
