--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Database files
-*.db
-*.sqlite3
-*.sqlite3-journal
+# # Database files
+# *.db
+# *.sqlite3
+# *.sqlite3-journal
 
-# macOS system files
-.DS_Store
-.AppleDouble
-.LSOverride
+# # macOS system files
+# .DS_Store
+# .AppleDouble
+# .LSOverride
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
