--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,7 @@ typing_extensions==4.13.2
 urllib3==2.4.0
 Werkzeug==3.1.3
 WTForms==3.2.1
+pytest==8.3.5
+pytest-flask==1.3.0
+pytest-mock==3.14.0
+selenium
